<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_login_input"
        android:layout_alignStart="@+id/login_login_input"
        android:id="@+id/textLogin" />

    <Button
        android:text="Login"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/create_account_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Creer un compte"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_button"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/login_button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ch_logo_with_text"
        android:id="@+id/imageView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/textLogin"
        android:padding="@dimen/activity_vertical_margin"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password_input"
        android:hint="mot de passe"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Mot de passe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/login_password_input"
        android:layout_alignStart="@+id/login_password_input"
        android:layout_marginBottom="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/login_login_input"
        android:hint="login"
        android:layout_above="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />
</RelativeLayout>